# ansys-material-db

./: .gitignore  README.md  ansys_material_db.spec  build.bat  pyproject.toml  run_packaged.py  test_DB.xml
src/ansys_material_db/: __init__.py  app.py  i18n.py  main.py
src/ansys_material_db/config/: __init__.py  settings.py
src/ansys_material_db/core/: document_parser.py  knowledge_base.py  property_extractor.py  qa_engine.py  xml_generator.py
src/ansys_material_db/gui/: __init__.py  document_manager.py  export_dialog.py  export_page.py  import_wizard.py  main_window.py  material_browser.py  property_editor.py  qa_chat_panel.py  settings_dialog.py  settings_page.py  styles.py  xml_import_dialog.py  xml_viewer_page.py
src/ansys_material_db/gui/widgets/: __init__.py  chat_bubble.py  property_table.py  temp_curve_widget.py
src/ansys_material_db/models/: __init__.py  chat.py  document.py  material.py
src/ansys_material_db/resources/prompts/: property_extraction.txt  qa_context.txt
tests/: conftest.py  test_database.py  test_document_parser.py  test_embeddings.py  test_property_extractor.py  test_qa_engine.py  test_xml_generator.py
