[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansys-material-db"
version = "0.1.0"
description = "Ansys Thermal Simulation Material Database"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
    "PyMuPDF",
    "Pillow",
    "openai",
    "lxml",
    "numpy",
    "sentence-transformers",
    "pytesseract",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
ansys-material-db = "ansys_material_db.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ansys_material_db"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
]
